--- a/_includes/hero_banner.html
+++ b/_includes/hero_banner.html
@@ -2,7 +2,7 @@
   {% if include.color %}
     bg-{{ include.color }}
   {% endif %} hero-banner {{include.additional_class}}" {% if include.image %} style="
-      background-image: url(/img/{{ include.image }});" {% endif %}>
+      background-image: url(/img/{{ include.image }}); background-size: 100% 100%" {% endif %}>
   <header class="hero hero-banner mb-5 {% if include.class %}{{ include.class }}{% endif %}">
     <div class="hero-container container-fluid text-center">
       <{% if page.layout=="toolkit" %}p{% else %}h1{% endif %}
@@ -22,6 +22,14 @@
         {{ include.hero_content | markdownify }}
         {% endif %}
       </div>
+      {% if include.link_content %}
+      <div class="hero-content">
+        <a href="{{include.link_href}}" class="{{include.link_class}}" {% if include.link_type
+          %}type="{{include.link_type}}" {% endif %}>
+          {{include.link_content}}
+        </a>
+      </div>
+      {% endif %}
     </div>
   </header>
 </div>
