--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -289,6 +289,7 @@ $footer-link-border-hover: 1px dashed $footer-link-hover-color;
 // Page CTA (subfooter)
 $page-cta-color: $white;
 $page-cta-bg-color: $brand-primary;
+$page-cta-bg-color-alternate: $brand-primary-light;
 
 $btn-page-cta-color: $white;
 $btn-page-cta-bg: $brand-primary;
