--- a/_sass/_buttons.scss
+++ b/_sass/_buttons.scss
@@ -14,3 +14,42 @@
     @extend %mr-2;
   }
 }
+
+.usa-button--outline.usa-button--inverse {
+    box-shadow: inset 0 0 0 2px #e6e6e6;
+    color: #e6e6e6;
+}
+
+.usa-button--outline {
+    background-color: transparent !important;
+    box-shadow: inset 0 0 0 2px #005ea2;
+    color: #005ea2;
+}
+
+.usa-button {
+    font-family: Source Sans Pro Web,Helvetica Neue,Helvetica,Roboto,Arial,sans-serif;
+    font-size: 1.06rem;
+    line-height: .9;
+    color: #fff;
+    background-color: #005ea2;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    align-items: center;
+    border: 0;
+    border-radius: .25rem;
+    cursor: pointer;
+    -moz-column-gap: .5rem;
+    column-gap: .5rem;
+    display: inline-flex;
+    font-weight: 700;
+    justify-content: center;
+    margin-right: .5rem;
+    padding: .75rem 1.25rem;
+    text-align: center;
+    text-decoration: none;
+}
+
+.btn-10 {
+  width: 10rem;
+}
