--- a/_sass/pages/_public_health.scss
+++ b/_sass/pages/_public_health.scss
@@ -124,7 +124,7 @@
 }
 
 
-.page-work-solutions-public-health{
+.page-work-solutions-public-health-index-html, .page-work-solutions-public-health{
   .public-health-content{
     li::before{
       content: "•" !important;
@@ -263,4 +263,8 @@
 
 .img-95 {
   width: 95% !important;
+}
+
+.img-90 {
+  width: 90% !important;
 }
