--- a/_sass/pages/_public_health.scss
+++ b/_sass/pages/_public_health.scss
@@ -142,6 +142,10 @@
   .vertical-align{
     display: flex;
     align-items: center;
+    height: 100%;
+    p {
+      margin-bottom: 0;
+    }
   }
   .next-to-purple{
     margin-right: 1rem;
